# ElephantShrew

./: .gitignore  .gitmodules  LICENSE  README.md  elephantshrew.json  meson.build  meson_options.txt
ElephantShrew/: elephantshrew.c  elephantshrew.json  meson.build
ElephantShrew/doc/: ffw.drawio
ElephantShrew/inc/: Bootstrapper.hpp  CommonDefs.hpp  ElephantShrew.h  ElephantShrew.hpp  ElephantShrewBootstrapper.hpp  ElephantShrewCommonDefs.h  ElephantShrewFileReceiver.h  ElephantShrewFileReceiver.hpp  ElephantShrewInboundHandler.h  ElephantShrewOutboundHandler.h  ElephantShrewOutboundHandler.hpp  ElephantShrewOverseer.h  ElephantShrewOverseer.hpp  ElephantShrewProcessor.h  ElephantShrewProcessor.hpp  ElephantShrewSuper.hpp  Executor.hpp  IElephantShrew.h  IElephantShrew.hpp  IElephantShrewFileReceiver.h  IElephantShrewFileReceiver.hpp  IElephantShrewReceiver.h  IElephantShrewReceiver.hpp  IElephantShrewTransmitter.h  IProcessor.h  IProcessor.hpp  IReceiver.hpp  IThreadPool.hpp  ITransmitter.hpp  IUdpReceiver.h  IUdpTransmitter.h  IUdpTransmitter.hpp  IUsbTransmitter.h  InboundHandler.hpp  NetworkInterfaceScanner.hpp  OutboundHandler.hpp  PcapReceiver.hpp  Processor.hpp  RedisPacketStore.hpp  RuntimeConfig.hpp  (+7 more)
ElephantShrew/int/: IElephantShrew.hpp  IThreadPool.hpp  IUdpReceiver.hpp
ElephantShrew/src/: Bootstrapper.cpp  ElephantShrew.cpp  ElephantShrewBootstrapper.cpp  ElephantShrewMain.cpp  ElephantShrewOutboundHandler.cpp  ElephantShrewOverseer.cpp  ElephantShrewProcessor.cpp  ElephantShrewSuper.cpp  FileReceiver.cpp  InboundHandler.cpp  InterfaceScanner.cpp  NetworkInterfaceScanner.cpp  OutboundHandler.cpp  Overseer.cpp  PcapReceiver.cpp  RedisPacketStore.cpp  RuntimeConfig.cpp  ThreadPool.cpp  UdpReceiver.cpp  UdpTransmitter.cpp  UsbTransmitter.cpp  main.cpp
inc/: DataProcessor.hpp  ElephantShrew.hpp  Executor.hpp  InboundHandler.hpp  OutboundHandler.hpp  PcapReceiver.hpp  RuntimeConfig.hpp  UdpReceiver.hpp  UdpTransmitter.hpp
int/: IElephantShrew.hpp  IPacketStore.hpp  ITask.hpp  ITransmitter.hpp  IUdpTransmitter.hpp
scripts/: run_clang_tidy.sh  run_cppcheck.sh  run_valgrind.sh  setup_build.sh
src/: Bootstrapper.cpp  DataProcessor.cpp  ElephantShrew.cpp  ElephantShrewMain.cpp  NetworkInterfaceScanner.cpp  PcapReceiver.cpp  RuntimeConfig.cpp  ThreadPool.cpp  UdpReceiver.cpp  boost_redis_tester.cpp
